feat: action editing and revised configuring and creating, dialog styling

--- a/webapp/src/locales/en.json
+++ b/webapp/src/locales/en.json
@@ -87,7 +87,7 @@
     },
     "action": {
         "settings": "{setting} settings",
-        "add": "Add {action} action",
+        "configure": "Configure {action} action",
         "delay": "Delay",
         "repeat": "Repeat",
         "retry": "Retry",
