feat: update frontend to handle auth requirement

--- a/webapp/src/locales/en.json
+++ b/webapp/src/locales/en.json
@@ -13,6 +13,7 @@
     "load": "Load",
     "input_voltage": "Input: {voltage}",
     "output_voltage": "Output: {voltage}",
+    "login": "Login",
     "event": {
         "columns": {
             "level": "Level",
