--- a/webapp/src/locales/en.json
+++ b/webapp/src/locales/en.json
@@ -16,6 +16,13 @@
     "login": "Login",
     "login_description": "This area is protected. You must login to access this page",
     "logout": "Logout",
+    "actions_title": "Actions",
+    "pipelines_title": "Event Pipelines",
+    "pipelines": {
+        "title": "Event Pipelines",
+        "empty": "You don't have any event pipelines, press Create to create a new one."
+    },
+    "create": "Create",
     "delete_pipeline": {
         "title": "Delete Pipeline",
         "message": "Are you sure you want to delete this pipeline?"
